--- a/_posts/2017-05-17-welcome-to-jekyll.adoc
+++ b/_posts/2017-05-17-welcome-to-jekyll.adoc
@@ -3,5 +3,6 @@ layout: post
 title:  "Welcome to Jekyll!"
 date:   2017-05-17 19:01:15 -0300
 categories: jekyll update
+summary: post de teste
 ---
 test http://www.google.com[google]
