--- a/_posts/2017-07-16-teorema-cap.adoc
+++ b/_posts/2017-07-16-teorema-cap.adoc
@@ -5,7 +5,7 @@ date:   2017-07-16 13:00:00 -0300
 categories: database
 summary: "Teorema CAP, sobre bancos de dados"
 tags:
-  - databse
+  - database
 ---
 Você já ouviu falar sobre o teorema CAP?
 
