Added docker tag

--- a/_posts/2017-07-27-ci-cd.adoc
+++ b/_posts/2017-07-27-ci-cd.adoc
@@ -6,6 +6,7 @@ categories: devops
 summary: "Casos e técnicas para implementar CI / CD"
 tags:
   - devops
+  - docker
   - ContinuousDelivery
   - ContinuousDeployment
 ---
