--- a/_posts/2017-05-19-newBlog.adoc
+++ b/_posts/2017-05-19-newBlog.adoc
@@ -3,7 +3,7 @@ layout: post
 title:  "Novo Blog"
 date:   2017-05-19 00:00:00 -0300
 categories: ruby
-summary: Novo Blog criado
+summary: Novo Blog criado, algumas dicas com jekyll + github
 tags:
   - ruby
   - jekyll
