--- a/_posts/2017-08-05-devopsdaypoa.adoc
+++ b/_posts/2017-08-05-devopsdaypoa.adoc
@@ -3,7 +3,7 @@ layout: post
 title:  "DevopsDay Porto Alegre"
 date:   2017-08-05 13:00:00 -0300
 categories: devops
-summary: "DevopsDay Porto Alegre"
+summary: "DevopsDay Porto Alegre - alguns links sobre o evento"
 tags:
   - devops
   - eventos
