--- a/_posts/2017-09-07-product-backlog.adoc
+++ b/_posts/2017-09-07-product-backlog.adoc
@@ -3,7 +3,7 @@ layout: post
 title:  "Product Backlog"
 date:   2017-09-07 13:00:00 -0300
 categories: lean
-summary: "Como organizar o backlog"
+summary: "Pq projetos falham, comunicação, backlog, qualidade, priorização, motivação, negociação"
 tags:
   - lean
 ---
