Added new quote

--- a/_posts/2017-09-20-lollipop.adoc
+++ b/_posts/2017-09-20-lollipop.adoc
@@ -86,7 +86,7 @@ E você? Já teve sua vida mudada por alguém? Seu momento pirulito? Agradeceu a
 
 ### Concluindo...
 
-Deixo aqui três pensamentos:
+Deixo aqui alguns pensamentos:
 
 '''
 
@@ -107,6 +107,13 @@ I’ve learned that people will forget what you said, people will forget what yo
 [,Kalu Ndukwe Kalu]
 ""
 The things you do for yourself are gone when you are gone, but the things you do for others remain as your legacy.
+""
+
+'''
+
+[,Charlie Jones]
+""
+You will be the same person in five years as you are today except for the people you meet and the books you read.
 ""
 
 '''
